--- a/notebookWorkspace.ipynb
+++ b/notebookWorkspace.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -121,8 +121,12 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>GlobalID</th>\n",
+       "      <th>Event_ID</th>\n",
        "      <th>Survey Location</th>\n",
+       "      <th>DateSurveyStr</th>\n",
+       "      <th>Start_Time</th>\n",
+       "      <th>End_Time</th>\n",
+       "      <th>Created_By</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -130,29 +134,53 @@
        "      <th>0</th>\n",
        "      <td>14be5beb-2209-4366-9bc5-8dbbc070367e</td>\n",
        "      <td>Kehoe Beach</td>\n",
+       "      <td>20240321</td>\n",
+       "      <td>8:39</td>\n",
+       "      <td>10:43</td>\n",
+       "      <td>MLau@nps.gov_nps</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>b8e08468-2616-4708-8d90-39778779dc92</td>\n",
        "      <td>Kehoe Beach</td>\n",
+       "      <td>20240321</td>\n",
+       "      <td>11:03</td>\n",
+       "      <td>12:46</td>\n",
+       "      <td>MLau@nps.gov_nps</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>03ee3334-76ed-4b58-b8f4-5de43cabf7d6</td>\n",
        "      <td>2011 Dune Restoration Area</td>\n",
+       "      <td>20240320</td>\n",
+       "      <td>11:00</td>\n",
+       "      <td>12:35</td>\n",
+       "      <td>MLau@nps.gov_nps</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>f44e3e4a-c151-492b-981c-aac5bc52c0c5</td>\n",
        "      <td>North Beach - Abbott's</td>\n",
+       "      <td>20240319</td>\n",
+       "      <td>10:20</td>\n",
+       "      <td>12:24</td>\n",
+       "      <td>MLau@nps.gov_nps</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>f56ec479-8a55-4a7b-aa6f-7e0a341db22b</td>\n",
        "      <td>North Beach - Abbott's</td>\n",
+       "      <td>20240311</td>\n",
+       "      <td>13:23</td>\n",
+       "      <td>15:17</td>\n",
+       "      <td>MLau@nps.gov_nps</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
@@ -160,50 +188,83 @@
        "      <th>219</th>\n",
        "      <td>2d8ecc99-fea0-415f-aa71-c92b2025c6fb</td>\n",
        "      <td>North Beach - Abbott's</td>\n",
+       "      <td>20240806</td>\n",
+       "      <td>10:13</td>\n",
+       "      <td>14:24</td>\n",
+       "      <td>agoldston@nps.gov_nps</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>220</th>\n",
        "      <td>9fd3a559-480c-4839-bf9d-9c069389a2e8</td>\n",
        "      <td>Kehoe Beach</td>\n",
+       "      <td>20240807</td>\n",
+       "      <td>11:06</td>\n",
+       "      <td>13:33</td>\n",
+       "      <td>agoldston@nps.gov_nps</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>221</th>\n",
        "      <td>b628232e-beda-4688-9f8a-1c5a6b935642</td>\n",
        "      <td>North Beach - Abbott's</td>\n",
+       "      <td>20240808</td>\n",
+       "      <td>10:13</td>\n",
+       "      <td>13:28</td>\n",
+       "      <td>agoldston@nps.gov_nps</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>222</th>\n",
        "      <td>b35209d4-eacb-47d9-afb2-3634d37428cd</td>\n",
        "      <td>North Beach - Abbott's</td>\n",
+       "      <td>20240809</td>\n",
+       "      <td>10:36</td>\n",
+       "      <td>14:14</td>\n",
+       "      <td>agoldston@nps.gov_nps</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>223</th>\n",
        "      <td>2894883d-86c9-4b89-a651-41460968a527</td>\n",
        "      <td>North Beach - Abbott's</td>\n",
+       "      <td>20240812</td>\n",
+       "      <td>8:09</td>\n",
+       "      <td>11:48</td>\n",
+       "      <td>agoldston@nps.gov_nps</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>224 rows × 2 columns</p>\n",
+       "<p>224 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 GlobalID             Survey Location\n",
-       "0    14be5beb-2209-4366-9bc5-8dbbc070367e                 Kehoe Beach\n",
-       "1    b8e08468-2616-4708-8d90-39778779dc92                 Kehoe Beach\n",
-       "2    03ee3334-76ed-4b58-b8f4-5de43cabf7d6  2011 Dune Restoration Area\n",
-       "3    f44e3e4a-c151-492b-981c-aac5bc52c0c5      North Beach - Abbott's\n",
-       "4    f56ec479-8a55-4a7b-aa6f-7e0a341db22b      North Beach - Abbott's\n",
-       "..                                    ...                         ...\n",
-       "219  2d8ecc99-fea0-415f-aa71-c92b2025c6fb      North Beach - Abbott's\n",
-       "220  9fd3a559-480c-4839-bf9d-9c069389a2e8                 Kehoe Beach\n",
-       "221  b628232e-beda-4688-9f8a-1c5a6b935642      North Beach - Abbott's\n",
-       "222  b35209d4-eacb-47d9-afb2-3634d37428cd      North Beach - Abbott's\n",
-       "223  2894883d-86c9-4b89-a651-41460968a527      North Beach - Abbott's\n",
+       "                                 Event_ID             Survey Location  \\\n",
+       "0    14be5beb-2209-4366-9bc5-8dbbc070367e                 Kehoe Beach   \n",
+       "1    b8e08468-2616-4708-8d90-39778779dc92                 Kehoe Beach   \n",
+       "2    03ee3334-76ed-4b58-b8f4-5de43cabf7d6  2011 Dune Restoration Area   \n",
+       "3    f44e3e4a-c151-492b-981c-aac5bc52c0c5      North Beach - Abbott's   \n",
+       "4    f56ec479-8a55-4a7b-aa6f-7e0a341db22b      North Beach - Abbott's   \n",
+       "..                                    ...                         ...   \n",
+       "219  2d8ecc99-fea0-415f-aa71-c92b2025c6fb      North Beach - Abbott's   \n",
+       "220  9fd3a559-480c-4839-bf9d-9c069389a2e8                 Kehoe Beach   \n",
+       "221  b628232e-beda-4688-9f8a-1c5a6b935642      North Beach - Abbott's   \n",
+       "222  b35209d4-eacb-47d9-afb2-3634d37428cd      North Beach - Abbott's   \n",
+       "223  2894883d-86c9-4b89-a651-41460968a527      North Beach - Abbott's   \n",
        "\n",
-       "[224 rows x 2 columns]"
+       "     DateSurveyStr Start_Time End_Time             Created_By  \n",
+       "0         20240321       8:39    10:43       MLau@nps.gov_nps  \n",
+       "1         20240321      11:03    12:46       MLau@nps.gov_nps  \n",
+       "2         20240320      11:00    12:35       MLau@nps.gov_nps  \n",
+       "3         20240319      10:20    12:24       MLau@nps.gov_nps  \n",
+       "4         20240311      13:23    15:17       MLau@nps.gov_nps  \n",
+       "..             ...        ...      ...                    ...  \n",
+       "219       20240806      10:13    14:24  agoldston@nps.gov_nps  \n",
+       "220       20240807      11:06    13:33  agoldston@nps.gov_nps  \n",
+       "221       20240808      10:13    13:28  agoldston@nps.gov_nps  \n",
+       "222       20240809      10:36    14:14  agoldston@nps.gov_nps  \n",
+       "223       20240812       8:09    11:48  agoldston@nps.gov_nps  \n",
+       "\n",
+       "[224 rows x 6 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,40 +278,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Get Location_ID from lookup \n",
-    "#Define Field 'Loocation_ID'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Define Field 'Protocol_Name' = 'PORE SNPL'\n",
-    "#Define Field Create_Date\n",
-    "#Define Filed Created_By - via etlInstance.inUser\n",
-    "#Define Field DataProcessingLevel = 1\n",
-    "#Define DataProcessingLEvelDate = Now()\n",
-    "#Define DataProcessingLevelUser - via etlInstance.inUser \n"
+    "\n",
+    "\n",
+    "#Define Field DataProcessingLevel = 1 - x\n",
+    "#Define DataProcessingLEvelDate = Now() - x\n",
+    "#Define DataProcessingLevelUser - via etlInstance.inUser - x\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Additional Attributes to Define\n",
     "#Define Observers - to table xref_EventContacts - harvest multple Items - make a SFAN_AGOL_ETL.py method\n",
-    "#Define Device - currently no place holder in DB Schema\n",
-    "#Define Survey Notes - currently no place holder in DB Schema"
+    "#Define Collection Device - currently no place holder in DB Schema\n",
+    "#Define Survey/Event Notes - goes to tbl_Event_Details"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
